--- a/constant-values.html
+++ b/constant-values.html
@@ -950,6 +950,39 @@
 </tbody>
 </table>
 </li>
+<li class="blockList">
+<table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
+<caption><span>mitiv.microscopy.<a href="mitiv/microscopy/PSF_Estimation.html" title="class in mitiv.microscopy">PSF_Estimation</a></span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colFirst" scope="col">Modifier and Type</th>
+<th scope="col">Constant Field</th>
+<th class="colLast" scope="col">Value</th>
+</tr>
+<tbody>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.microscopy.PSF_Estimation.ALPHA">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/microscopy/PSF_Estimation.html#ALPHA">ALPHA</a></code></td>
+<td class="colLast"><code>2</code></td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a name="mitiv.microscopy.PSF_Estimation.BETA">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/microscopy/PSF_Estimation.html#BETA">BETA</a></code></td>
+<td class="colLast"><code>3</code></td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.microscopy.PSF_Estimation.DEFOCUS">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/microscopy/PSF_Estimation.html#DEFOCUS">DEFOCUS</a></code></td>
+<td class="colLast"><code>1</code></td>
+</tr>
+</tbody>
+</table>
+</li>
 </ul>
 <a name="mitiv.optim">
 <!--   -->
@@ -1125,102 +1158,88 @@
 <td class="colLast"><code>520</code></td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.FAILURE">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#FAILURE">FAILURE</a></code></td>
-<td class="colLast"><code>-1</code></td>
-</tr>
-<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.FLETCHER">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#FLETCHER">FLETCHER</a></code></td>
 <td class="colLast"><code>4</code></td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.FLETCHER_REEVES">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#FLETCHER_REEVES">FLETCHER_REEVES</a></code></td>
 <td class="colLast"><code>1</code></td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.HAGER_ZHANG">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#HAGER_ZHANG">HAGER_ZHANG</a></code></td>
 <td class="colLast"><code>8</code></td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.HESTENES_STIEFEL">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#HESTENES_STIEFEL">HESTENES_STIEFEL</a></code></td>
 <td class="colLast"><code>2</code></td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.LIU_STOREY">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#LIU_STOREY">LIU_STOREY</a></code></td>
 <td class="colLast"><code>5</code></td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.PERRY_SHANNO">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#PERRY_SHANNO">PERRY_SHANNO</a></code></td>
 <td class="colLast"><code>7</code></td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.POLAK_RIBIERE_POLYAK">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#POLAK_RIBIERE_POLYAK">POLAK_RIBIERE_POLYAK</a></code></td>
 <td class="colLast"><code>3</code></td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.POWELL">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#POWELL">POWELL</a></code></td>
 <td class="colLast"><code>256</code></td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.SHANNO_PHUA">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#SHANNO_PHUA">SHANNO_PHUA</a></code></td>
 <td class="colLast"><code>512</code></td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.STPMAX">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;double</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#STPMAX">STPMAX</a></code></td>
 <td class="colLast"><code>1000000.0</code></td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.STPMIN">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;double</code></td>
 <td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#STPMIN">STPMIN</a></code></td>
 <td class="colLast"><code>1.0E-20</code></td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><a name="mitiv.optim.NonLinearConjugateGradient.SUCCESS">
-<!--   -->
-</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
-<td><code><a href="mitiv/optim/NonLinearConjugateGradient.html#SUCCESS">SUCCESS</a></code></td>
-<td class="colLast"><code>0</code></td>
-</tr>
 </tbody>
 </table>
 </li>
 <li class="blockList">
 <table border="0" cellpadding="3" cellspacing="0" summary="Constant Field Values table, listing constant fields, and values">
-<caption><span>mitiv.optim.<a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim">ReverseCommunicationOptimizer</a></span><span class="tabEnd">&nbsp;</span></caption>
+<caption><span>mitiv.optim.<a href="mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim">ReverseCommunicationOptimizer</a></span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
 <th class="colFirst" scope="col">Modifier and Type</th>
 <th scope="col">Constant Field</th>
@@ -1228,11 +1247,39 @@
 </tr>
 <tbody>
 <tr class="altColor">
+<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.BAD_PRECONDITIONER">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#BAD_PRECONDITIONER">BAD_PRECONDITIONER</a></code></td>
+<td class="colLast"><code>1</code></td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.FAILURE">
 <!--   -->
 </a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
 <td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#FAILURE">FAILURE</a></code></td>
 <td class="colLast"><code>-1</code></td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_ERROR">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_ERROR">LNSRCH_ERROR</a></code></td>
+<td class="colLast"><code>3</code></td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.LNSRCH_WARNING">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#LNSRCH_WARNING">LNSRCH_WARNING</a></code></td>
+<td class="colLast"><code>2</code></td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.NO_PROBLEMS">
+<!--   -->
+</a><code>public&nbsp;static&nbsp;final&nbsp;int</code></td>
+<td><code><a href="mitiv/optim/ReverseCommunicationOptimizer.html#NO_PROBLEMS">NO_PROBLEMS</a></code></td>
+<td class="colLast"><code>0</code></td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a name="mitiv.optim.ReverseCommunicationOptimizer.SUCCESS">
