--- a/mitiv/deconv/ConvolutionOperator.html
+++ b/mitiv/deconv/ConvolutionOperator.html
@@ -34,7 +34,7 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
+<li><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
 <li><a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
@@ -391,7 +391,7 @@ extends <a href="../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="cla
 </div>
 <div class="subNav">
 <ul class="navList">
-<li>PREV CLASS</li>
+<li><a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
 <li><a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
