--- a/mitiv/deconv/impl/package-summary.html
+++ b/mitiv/deconv/impl/package-summary.html
@@ -74,37 +74,97 @@
 </tr>
 <tbody>
 <tr class="altColor">
-<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl">ConvolutionDouble1D</a></td>
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble.html" title="class in mitiv.deconv.impl">ConvolutionDouble</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based weighted convolution for 1D arrays of double's.</div>
+<div class="block">Implements abstract class for FFT-based convolution of arrays of double's.</div>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a></td>
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl">ConvolutionDouble1D</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based weighted convolution for 2D arrays of double's.</div>
+<div class="block">Implements FFT-based convolution for 1D arrays of double's.</div>
 </td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl">ConvolutionDouble2D</a></td>
+<td class="colLast">
+<div class="block">Implements FFT-based convolution for 2D arrays of double's.</div>
+</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionDouble3D.html" title="class in mitiv.deconv.impl">ConvolutionDouble3D</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based weighted convolution for 3D arrays of double's.</div>
+<div class="block">Implements FFT-based convolution for 3D arrays of double's.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl">ConvolutionFloat</a></td>
+<td class="colLast">
+<div class="block">Implements abstract class for FFT-based convolution of arrays of float's.</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html" title="class in mitiv.deconv.impl">ConvolutionFloat1D</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based weighted convolution for 1D arrays of float's.</div>
+<div class="block">Implements FFT-based convolution for 1D arrays of float's.</div>
 </td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl">ConvolutionFloat2D</a></td>
 <td class="colLast">
-<div class="block">Implements a FFT-based weighted convolution for 2D arrays of float's.</div>
+<div class="block">Implements FFT-based convolution for 2D arrays of float's.</div>
 </td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><a href="../../../mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl">ConvolutionFloat3D</a></td>
+<td class="colLast">
+<div class="block">Implements FFT-based convolution for 3D arrays of float's.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble</a></td>
+<td class="colLast">
+<div class="block">Abstract class for FFT-based weighted convolution of arrays of double's.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble1D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble1D</a></td>
+<td class="colLast">
+<div class="block">Implements a FFT-based weighted convolution for 1D arrays of double's.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble2D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble2D</a></td>
+<td class="colLast">
+<div class="block">Implements a FFT-based weighted convolution for 2D arrays of double's.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionDouble3D</a></td>
+<td class="colLast">
+<div class="block">Implements a FFT-based weighted convolution for 3D arrays of double's.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat</a></td>
+<td class="colLast">
+<div class="block">Abstract class for FFT-based weighted convolution of arrays of float's.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat1D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat1D</a></td>
+<td class="colLast">
+<div class="block">Implements a FFT-based weighted convolution for 1D arrays of float's.</div>
+</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat2D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat2D</a></td>
+<td class="colLast">
+<div class="block">Implements a FFT-based weighted convolution for 2D arrays of float's.</div>
+</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl">WeightedConvolutionFloat3D</a></td>
 <td class="colLast">
 <div class="block">Implements a FFT-based weighted convolution for 3D arrays of float's.</div>
 </td>
