--- a/mitiv/deconv/package-frame.html
+++ b/mitiv/deconv/package-frame.html
@@ -11,11 +11,12 @@
 <div class="indexContainer">
 <h2 title="Classes">Classes</h2>
 <ul title="Classes">
+<li><a href="Convolution.html" title="class in mitiv.deconv" target="classFrame">Convolution</a></li>
 <li><a href="ConvolutionOperator.html" title="class in mitiv.deconv" target="classFrame">ConvolutionOperator</a></li>
 <li><a href="Deconvolution.html" title="class in mitiv.deconv" target="classFrame">Deconvolution</a></li>
 <li><a href="DeconvUtils.html" title="class in mitiv.deconv" target="classFrame">DeconvUtils</a></li>
 <li><a href="Filter.html" title="class in mitiv.deconv" target="classFrame">Filter</a></li>
-<li><a href="WeightedConvolutionOperator.html" title="class in mitiv.deconv" target="classFrame">WeightedConvolutionOperator</a></li>
+<li><a href="WeightedConvolutionCost.html" title="class in mitiv.deconv" target="classFrame">WeightedConvolutionCost</a></li>
 <li><a href="WeightingOperator.html" title="class in mitiv.deconv" target="classFrame">WeightingOperator</a></li>
 </ul>
 </div>
