--- a/mitiv/linalg/shaped/ShapedLinearOperator.html
+++ b/mitiv/linalg/shaped/ShapedLinearOperator.html
@@ -103,7 +103,7 @@
 </dl>
 <dl>
 <dt>Direct Known Subclasses:</dt>
-<dd><a href="../../../mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a>, <a href="../../../mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a>, <a href="../../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv">WeightedConvolutionOperator</a></dd>
+<dd><a href="../../../mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv">ConvolutionOperator</a>, <a href="../../../mitiv/linalg/shaped/RealComplexFFT.html" title="class in mitiv.linalg.shaped">RealComplexFFT</a></dd>
 </dl>
 <hr>
 <br>
