--- a/overview-frame.html
+++ b/overview-frame.html
@@ -30,6 +30,7 @@
 <li><a href="mitiv/random/package-frame.html" target="packageFrame">mitiv.random</a></li>
 <li><a href="mitiv/tests/package-frame.html" target="packageFrame">mitiv.tests</a></li>
 <li><a href="mitiv/utils/package-frame.html" target="packageFrame">mitiv.utils</a></li>
+<li><a href="mitiv/utils/reconstruction/package-frame.html" target="packageFrame">mitiv.utils.reconstruction</a></li>
 </ul>
 </div>
 <p>&nbsp;</p>
