--- a/mitiv/deconv/package-tree.html
+++ b/mitiv/deconv/package-tree.html
@@ -72,6 +72,7 @@
 <ul>
 <li type="circle">java.lang.Object
 <ul>
+<li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">Convolution</span></a></li>
 <li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/Deconvolution.html" title="class in mitiv.deconv"><span class="strong">Deconvolution</span></a></li>
 <li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv"><span class="strong">DeconvUtils</span></a></li>
 <li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/Filter.html" title="class in mitiv.deconv"><span class="strong">Filter</span></a></li>
@@ -80,12 +81,12 @@
 <li type="circle">mitiv.linalg.shaped.<a href="../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped"><span class="strong">ShapedLinearOperator</span></a> (implements mitiv.base.<a href="../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)
 <ul>
 <li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/ConvolutionOperator.html" title="class in mitiv.deconv"><span class="strong">ConvolutionOperator</span></a></li>
-<li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv"><span class="strong">WeightedConvolutionOperator</span></a></li>
 </ul>
 </li>
 <li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/WeightingOperator.html" title="class in mitiv.deconv"><span class="strong">WeightingOperator</span></a></li>
 </ul>
 </li>
+<li type="circle">mitiv.deconv.<a href="../../mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv"><span class="strong">WeightedConvolutionCost</span></a> (implements mitiv.cost.<a href="../../mitiv/cost/DifferentiableCostFunction.html" title="interface in mitiv.cost">DifferentiableCostFunction</a>)</li>
 </ul>
 </li>
 </ul>
