--- a/mitiv/optim/package-frame.html
+++ b/mitiv/optim/package-frame.html
@@ -9,28 +9,30 @@
 <body>
 <h1 class="bar"><a href="../../mitiv/optim/package-summary.html" target="classFrame">mitiv.optim</a></h1>
 <div class="indexContainer">
-<h2 title="Interfaces">Interfaces</h2>
-<ul title="Interfaces">
-<li><a href="ReverseCommunicationOptimizer.html" title="interface in mitiv.optim" target="classFrame"><i>ReverseCommunicationOptimizer</i></a></li>
-</ul>
 <h2 title="Classes">Classes</h2>
 <ul title="Classes">
 <li><a href="ArmijoLineSearch.html" title="class in mitiv.optim" target="classFrame">ArmijoLineSearch</a></li>
+<li><a href="BLMVM.html" title="class in mitiv.optim" target="classFrame">BLMVM</a></li>
 <li><a href="BoundProjector.html" title="class in mitiv.optim" target="classFrame">BoundProjector</a></li>
 <li><a href="ConvexSetProjector.html" title="class in mitiv.optim" target="classFrame">ConvexSetProjector</a></li>
+<li><a href="GeneralBounds.html" title="class in mitiv.optim" target="classFrame">GeneralBounds</a></li>
 <li><a href="LBFGS.html" title="class in mitiv.optim" target="classFrame">LBFGS</a></li>
-<li><a href="LBFGSB.html" title="class in mitiv.optim" target="classFrame">LBFGSB</a></li>
 <li><a href="LBFGSOperator.html" title="class in mitiv.optim" target="classFrame">LBFGSOperator</a></li>
 <li><a href="LineSearch.html" title="class in mitiv.optim" target="classFrame">LineSearch</a></li>
 <li><a href="MoreThuenteLineSearch.html" title="class in mitiv.optim" target="classFrame">MoreThuenteLineSearch</a></li>
 <li><a href="NonLinearConjugateGradient.html" title="class in mitiv.optim" target="classFrame">NonLinearConjugateGradient</a></li>
+<li><a href="NonmonotoneLineSearch.html" title="class in mitiv.optim" target="classFrame">NonmonotoneLineSearch</a></li>
+<li><a href="ReverseCommunicationOptimizer.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizer</a></li>
+<li><a href="ReverseCommunicationOptimizerWithLineSearch.html" title="class in mitiv.optim" target="classFrame">ReverseCommunicationOptimizerWithLineSearch</a></li>
 <li><a href="SimpleBounds.html" title="class in mitiv.optim" target="classFrame">SimpleBounds</a></li>
 <li><a href="SimpleLowerBound.html" title="class in mitiv.optim" target="classFrame">SimpleLowerBound</a></li>
 <li><a href="SimpleUpperBound.html" title="class in mitiv.optim" target="classFrame">SimpleUpperBound</a></li>
+<li><a href="VMLMB.html" title="class in mitiv.optim" target="classFrame">VMLMB</a></li>
 </ul>
 <h2 title="Enums">Enums</h2>
 <ul title="Enums">
 <li><a href="InverseHessianApproximation.html" title="enum in mitiv.optim" target="classFrame">InverseHessianApproximation</a></li>
+<li><a href="LineSearchStatus.html" title="enum in mitiv.optim" target="classFrame">LineSearchStatus</a></li>
 <li><a href="OptimTask.html" title="enum in mitiv.optim" target="classFrame">OptimTask</a></li>
 </ul>
 </div>
