--- a/overview-summary.html
+++ b/overview-summary.html
@@ -144,6 +144,10 @@
 <td class="colFirst"><a href="mitiv/utils/package-summary.html">mitiv.utils</a></td>
 <td class="colLast">&nbsp;</td>
 </tr>
+<tr class="rowColor">
+<td class="colFirst"><a href="mitiv/utils/reconstruction/package-summary.html">mitiv.utils.reconstruction</a></td>
+<td class="colLast">&nbsp;</td>
+</tr>
 </tbody>
 </table>
 </div>
